<?xml version="1.0"?>
<package format="2">
	<name>scitos_drivers</name>
	<version>0.2.5</version>
	<license>GPL</license>
	<description>Driver for Scitos-G5 using the MIRA framework. Includes drivers for other typical Scitos Hardware, eg laser scanner. </description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<url type="website">http://github.com/ajtudela/scitos_drivers</url>
	<author email="cburbridge@gmail.com">Chris Burbridge</author>
	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>scitos_mira</exec_depend>
	<exec_depend>sicks300</exec_depend>
	<exec_depend>flir_pantilt_d46</exec_depend>
	<exec_depend>scitos_bringup</exec_depend>
	<exec_depend>scitos_pc_monitor</exec_depend>
	<export>
		<metapackage/>
	</export>
</package>
