<?xml version="1.0"?>
<package format="2">
	<name>scitos_mira</name>
	<version>0.2.5</version>
	<description>Driver for Scitos-G5 using the MIRA framework.</description>
	<maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>  
	<author email="marc@hanheide.net">Marc Hanheide</author>
	<author email="tkrajnik@lincoln.ac.uk">Tom Krajnik</author>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<license>GPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>scitos_msgs</build_depend>
	<build_depend>mira-scitos</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>libqt4-dev</build_depend>

	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>tf</exec_depend>
	<exec_depend>scitos_msgs</exec_depend>
	<exec_depend>mira-scitos</exec_depend>
	<exec_depend>dynamic_reconfigure</exec_depend>
	<exec_depend>libqt4-dev</exec_depend>
</package>
